--- a/simplestats/Base.lproj/Main.storyboard
+++ b/simplestats/Base.lproj/Main.storyboard
@@ -96,6 +96,9 @@
                                 <rect key="frame" x="190" y="230" width="81" height="27"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="onepassword-button"/>
+                                <connections>
+                                    <action selector="findLoginFrom1Password:" destination="4fZ-DZ-CAk" eventType="touchDown" id="kVB-BJ-OVX"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RQW-gu-szd">
                                 <rect key="frame" x="34" y="318" width="46" height="30"/>
@@ -110,6 +113,9 @@
                                         </fragment>
                                     </attributedString>
                                 </state>
+                                <connections>
+                                    <action selector="login:" destination="4fZ-DZ-CAk" eventType="touchDown" id="U3k-3A-jcM"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
